[package]

name = "consul"
version = "0.0.6"
authors = ["YoungKing <yanckin@gmail.com>", "Stu Small <stuart.alan.small@gmail.com>"]
description = "Rust client libray for Consul HTTP API"
documentation = "http://youngking.github.io/consul-rust/consul/"
repository = "https://github.com/stusmall/consul-rust"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["consul", "discovery"]

exclude = [
    "data/*",
]

[dependencies]
hyper = "*"
rustc-serialize = "*"
log = "*"
env_logger = "*"
